--- a/index.qmd
+++ b/index.qmd
@@ -1,11 +1,27 @@
 ---
-title: "nlebovits.github.io"
+title: "Nissim Lebovits"
+image: assets/alps_profile_pic.jpeg
+about:
+  template: jolla
+  image-width: 20em
+  image-shape: round
+  links:
+    - icon: twitter
+      text: Twitter
+      href: https://twitter.com/nlebovits
+    - icon: linkedin
+      text: LinkedIn
+      href: https://www.linkedin.com/in/nlebovits/
+    - icon: github
+      text: Github
+      href: https://github.com/nlebovits/
+    - icon: envelope
+      text: Contact me
+      href: mailto:nissim@design.upenn.edu
 ---
 
-This is a Quarto website.
+I'm a master's student in city planning at the University of Pennsylvania's [Weitzman School of Design](https://www.design.upenn.edu/), where I focus on environmental planning and spatial analysis. I work primarily in R, Python, and ArcGIS, and am currently learning JavaScript. Currently, I work as a research assistant for [Professor Allison Lassiter](https://www.design.upenn.edu/people/allison-lassiter), for whom I'll be analyzing the impacts of sea level rise on vulnerable coastal drinking water systems.
 
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
+I'm interested in using data to foster civic engagement and build more sustainable, inclusive cities. I believe in open-source tech and community-driven work. Check out my [projects](/projects/) page to see what I've been working on lately.
 
-```{r}
-1 + 1
-```
+Previously I was an AmeriCorps VISTA with the City of Philadelphia, where I worked to support residents of the [West Philadelphia Promise Zone](https://www.phila.gov/programs/west-philadelphia-promise-zone/). Before that, I was managing editor for [Symposem Magazine](https://symposeum.us/), and before that, [I studied history](https://ir.vanderbilt.edu/handle/1803/16300) at Vanderbilt University.
