--- a/posts/water_suppliers/index.qmd
+++ b/posts/water_suppliers/index.qmd
@@ -1,8 +1,7 @@
 ---
 title: "Identifying Vulnerable Water Suppliers"
 date: 01-2-2023 
-author: Nissim Lebovits
-categories: [code, analysis, visualization, plotly]
+categories: [geospatial, clustering, climate, equity]
 image: "costa_rica_slope.png"
 ---
   
