--- a/index.qmd
+++ b/index.qmd
@@ -21,10 +21,10 @@ about:
       href: mailto:nissim@design.upenn.edu
 ---
 
-I'm a master's student in city planning at the University of Pennsylvania's [Weitzman School of Design](https://www.design.upenn.edu/), where I focus on environmental planning and spatial analysis. 
+I'm a master's student in city planning at the University of Pennsylvania's [Weitzman School of Design](https://www.design.upenn.edu/), where I focus on environmental planning and spatial analysis.
 
 Currently, I work as a research assistant for [Professor Allison Lassiter](https://www.design.upenn.edu/people/allison-lassiter), with whom I'm building a clustering model to identify vulnerable U.S. community drinking water systems. I also work for [Professor Matthijs Bouw](https://www.design.upenn.edu/people/matthijs-bouw) on a UN-Habitat project that will help urban planners in the global south mitigate conflicts between urban expansion, climate threats, and biodiversity loss. I work primarily in R and Python, as well as JavaScript and ArcGIS. Recently, I've been using Google Earth Engine for machine learning applications.
 
-I'm interested in using data to foster civic engagement and build more sustainable, inclusive cities. I believe in open-source tech and community-driven work. Check out [my work](https://nlebovits.github.io/projects.html) to see what I've been working on lately.
+I'm interested in using data to foster civic engagement and build more sustainable, inclusive cities. I believe in open-source tech and community-driven work. Check out [my work](https://nlebovits.github.io/projects.html) to see what I've been up to lately.
 
 In 2021, I spent a year as an AmeriCorps VISTA with the City of Philadelphia, where I worked to support residents of the [West Philadelphia Promise Zone](https://www.phila.gov/programs/west-philadelphia-promise-zone/). Before that, I was managing editor for [Symposem Magazine](https://symposeum.us/), and before that, [I studied history](https://ir.vanderbilt.edu/handle/1803/16300) at Vanderbilt University.
