--- a/posts/illegal_dumping_dashboard/index.qmd
+++ b/posts/illegal_dumping_dashboard/index.qmd
@@ -1,8 +1,7 @@
 ---
 title: "Illegal Dumping Live Dashboard"
 date: 12-2-2022 
-author: Nissim Lebovits
-categories: [geospatial, open data, urban, public health, dashboard]
+categories: [urban, public health, dashboard]
 image: "dashboard_screenshot.png"
 ---
 
