--- a/posts/illegal_dumping/index.qmd
+++ b/posts/illegal_dumping/index.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Predicting Illegal Dumping"
 date: 10-19-2023
-categories: [geospatial, urban, prediction, environment, public health]
+categories: [urban, prediction, climate/environment, public health]
 image: "illegal_dumping_grid.png"
 ---
 
