--- a/posts/upzoning/index.qmd
+++ b/posts/upzoning/index.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Identifying Upzoning Opportunities"
 date: 12-22-2023
-categories: [geospatial, urban, prediction]
+categories: [urban, prediction, machine learning]
 image: "zoning.png"
 ---
 
