--- a/posts/illegal_dumping_dashboard/index.qmd
+++ b/posts/illegal_dumping_dashboard/index.qmd
@@ -2,7 +2,48 @@
 title: "Illegal Dumping Live Dashboard"
 date: 12-2-2022 
 categories: [urban, public health, dashboard]
+engine: knitr
+freeze: false
 image: "dashboard_screenshot.png"
 ---
 
-https://rpubs.com/nlebovits/phl-illegal-dumping
+```{css echo=FALSE}
+.embed-container {
+    position: relative;
+    padding-bottom: 129%;
+    height: 0;
+    overflow: hidden;
+    max-width: 100%;
+}
+
+.embed-container iframe,
+.embed-container object,
+.embed-container embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.resp-container {
+    position: relative;
+    overflow: hidden;
+    padding-top: 56.25%;
+}
+
+.resp-iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+}
+```
+
+```{=html}
+<div class="resp-container">
+    <iframe class="resp-iframe" src="https://stats.andrewheiss.com/iframe-fun/dashboard.html"></iframe>
+</div>
+```
