--- a/posts/upzoning/index.qmd
+++ b/posts/upzoning/index.qmd
@@ -2,7 +2,40 @@
 title: "Identifying Upzoning Opportunities"
 date: 12-22-2023
 categories: [urban, prediction, machine learning]
-image: "zoning.png"
+engine: knitr
+freeze: false
+image: "wireframes.jpg"
 ---
 
-https://nlebovits.github.io/musa-508-2023-final/
+
+
+```{css echo=FALSE}
+.embed-container {
+    position: relative;
+    padding-bottom: 150%;
+    padding-top: 20px;
+    height: 0;
+    overflow: hidden;
+    max-width: 100%;
+    border-top: 1px solid #434a42; /* Thin line added at the top */
+}
+
+.embed-container iframe,
+.embed-container object,
+.embed-container embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+```
+
+For a "Public Policy Analytics" class at Penn, Laura Frances and I analyzed conflicts between anticipated and current zoning. Using a random forest model trained on historic Philadelphia construction permits, we identified areas of the city with restrictive zoning that would potentially hinder anticipated residential development. We then considered how the model could be used to inform efforts at zoning reform and more strategic planning meant to alleviate issues of housing affordability across Philadelphia.
+
+```{=html}
+<!-- No changes needed for the embed-container -->
+<div class="embed-container">
+  <iframe src="https://nlebovits.github.io/musa-508-2023-final/" style="border: 2px"></iframe>
+</div>
+```
