make more changes to portfolio

--- a/posts/dashboard/index.qmd
+++ b/posts/dashboard/index.qmd
@@ -30,7 +30,7 @@ poster:
 
 ```
 
-Philadelphia has a gun violence problem. Through Code for Philly, I am leading [a civic tech project](https://github.com/CodeForPhilly/vacant-lots-proj) that will help solve this problem by empowering community groups to carry out cleaning and greening interventions in the vacant properties where they can have the biggest impact.
+Philadelphia has a gun violence problem. Through Code for Philly, I am leading [a civic tech project](https://github.com/CodeForPhilly/vacant-lots-proj) that will help solve this problem by empowering community groups to carry out cleaning and greening interventions in the vacant properties where they can have the biggest impact. For this work, I was awarded the [2023 Witte-Sakamoto Family Prize in City Planning](https://awards.design.upenn.edu/winner/nissim-lebovits-mcp24).
 
 Explore [the live version of the dashboard here](https://www.cleanandgreenphilly.org/) or read more about it in the PDF below.
 
