--- a/posts/water_suppliers/index.qmd
+++ b/posts/water_suppliers/index.qmd
@@ -2,7 +2,10 @@
 title: "Identifying Vulnerable Water Suppliers"
 date: 01-2-2023 
 categories: [clustering, climate/environment, equity]
-image: "costa_rica_slope.png"
+image: "supplier_clustering_illustration.jpeg"
 ---
   
-In this post, I will analyse the TidyTuesday dataset about Retail Sales ..
+As a research assistant for Professor Allison Lassiter, I work on assessing the vulnerability of U.S. coastal drinking water suppliers to climate change. We consider financial, physical, and climatic dimensions of vulnerability and are applying various clustering models to them, such as k-means clustering and Gaussian mixture modeling. We hope that this work will eventually inform a Robert Wood Johnson Foundation effort to direct funding to underserved and overburdened water suppliers.
+
+Forthcoming, “Which water suppliers are underserved and overburdened? A multidimensional classification of
+vulnerability under climate stress,” Allison Lassiter, Nissim Lebovits, Zoe Kerrich, and Henry Feinstein.
